<resources>
    <string name="app_name">Workout Tracker</string>
    <string name="create_button">Create</string>
    <string name="finish_button">Finish</string>
    <string name="view_button">View</string>
    <string name="delete_button">Finish Program</string>
    <string name="number_of_weeks">Number of Weeks:</string>
    <string name="create_table">Create Table</string>
    <string name="program_name">Program Name:</string>
    <string name="title_activity_table">table</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="get_endpoint">https://fyg4bu5v08.execute-api.us-east-1.amazonaws.com/prod/programs</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>
    <string name="title_activity_weekly">WeeklyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
