<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer">

<RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".InputTableActivity">
    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="25dp"
              android:id="@+id/title"
              android:layout_below="@id/toolbar"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/program_name"
              android:id="@+id/nameTitle"
              android:layout_centerHorizontal="true"
              android:layout_below="@id/title"
              android:layout_marginTop="25dp"
    android:layout_marginRight="25dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/name"
              android:layout_alignTop="@id/nameTitle"
              android:layout_alignBottom="@id/nameTitle"
              android:layout_alignRight="@id/nameTitle"
              android:layout_marginLeft="1dp" android:layout_marginRight="-150dp" android:layout_marginTop="1dp"
              android:layout_marginBottom="-1dp"
              android:layout_toEndOf="@id/nameTitle" android:layout_toRightOf="@id/nameTitle"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/weekTitle"
              android:text="@string/number_of_weeks"
              android:layout_below="@id/name"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="25dp"
              android:layout_marginRight="25dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/weeks"
              android:layout_alignRight="@id/weekTitle"
              android:layout_alignTop="@id/weekTitle"
              android:layout_alignBottom="@id/weekTitle"
              android:layout_marginLeft="1dp" android:layout_marginTop="1dp" android:layout_marginRight="-100dp"
              android:layout_marginBottom="-1dp"
              android:layout_toEndOf="@id/weekTitle" android:layout_toRightOf="@id/weekTitle"/>
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:id="@+id/FragmentFrame"
    android:layout_below="@id/weeks">
        <fragment android:layout_width="match_parent" android:layout_height="400dp"
              android:id="@+id/tableFragment"
              android:name="com.example.myapplication.TableFragment"
              android:layout_below="@id/weeks"
              android:layout_marginTop="10dp" class="com.example.myapplication.TableFragment"/>
    </FrameLayout>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/addbtn"
            android:text="@string/add"
            android:layout_below="@+id/FragmentFrame" tools:ignore="UnknownId"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:onClick="AddWorkout"
            android:layout_marginTop="20dp"/>


</RelativeLayout>
    <com.google.android.material.navigation.NavigationView android:layout_width="wrap_content"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/navDrawer"
                                                           app:menu="@menu/nav_drawer_menu"
                                                           app:headerLayout="@layout/nav_header"
                                                           android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>