<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:openDrawer="start"
        android:id="@+id/drawer">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar android:layout_width="match_parent" android:layout_height="wrap_content"
                                           android:id="@+id/toolbar"
                                           android:background="@color/colorAccent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/app_name" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="52dp"
                    android:gravity="top"
                    android:textSize="24sp" android:translationY="-30dp"/>
        </androidx.appcompat.widget.Toolbar>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button"
                android:onClick="CreateView" android:visibility="visible"
                android:layout_marginTop="60dp"
                tools:text="@string/create_button"
                android:layout_below="@+id/toolbar"
                android:layout_centerHorizontal="true"
                android:text="@string/create_button" android:background="@color/colorAccent"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2"
                android:layout_marginTop="60dp" tools:text="@string/view_button" android:onClick="ViewView"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:text="@string/view_button" android:background="#8445DD"/>


    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView android:layout_width="wrap_content"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/navDrawer"
                                                           app:menu="@menu/nav_drawer_menu"
                                                           app:headerLayout="@layout/nav_header"
                                                           android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>