<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                           xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                           android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:id="@+id/drawer">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <include layout="@layout/toolbar" android:id="@+id/include"/>


    <TextView
            android:text="@string/program_name"
            android:layout_width="136dp"
            android:layout_height="45dp" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            app:layout_constraintRight_toLeftOf="@id/name"
            android:textSize="18sp" app:layout_constraintTop_toBottomOf="@+id/include" android:layout_marginTop="44dp"/>

    <EditText
            android:layout_width="112dp"
            android:layout_height="45dp"
            android:id="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textShortMessage" android:importantForAutofill="no"
            android:layout_marginEnd="68dp" android:layout_marginRight="68dp"
            app:layout_constraintTop_toBottomOf="@+id/include" android:layout_marginTop="44dp"
            android:layout_marginLeft="23dp" android:layout_marginStart="23dp"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/number_of_weeks"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="56dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="88dp" android:layout_marginStart="88dp"
            app:layout_constraintRight_toLeftOf="@id/weeks" android:textSize="18sp"/>
    <EditText
            android:layout_width="78dp"
            android:layout_height="48dp"
            android:id="@+id/weeks"
            app:layout_constraintStart_toEndOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginTop="56dp" android:inputType="number" android:importantForAutofill="no"/>
    <Button
            android:text="@string/create_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/createbtn"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            android:layout_marginTop="60dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView android:layout_width="wrap_content"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/navDrawer"
                                                           app:menu="@menu/nav_drawer_menu"
                                                           app:headerLayout="@layout/nav_header"
                                                           android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>