<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                           xmlns:tools="http://schemas.android.com/tools"
                                           xmlns:app="http://schemas.android.com/apk/res-auto"
                                           android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:id="@+id/drawer">
<RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ViewActivity">
    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/program_name"
              android:id="@+id/nameTitle"
              android:layout_centerHorizontal="true"
              android:layout_below="@id/toolbar"
              android:layout_marginTop="25dp"
              android:layout_marginRight="25dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/name"
              android:layout_alignTop="@id/nameTitle"
              android:layout_alignBottom="@id/nameTitle"
              android:layout_alignRight="@id/nameTitle"
              android:layout_marginLeft="1dp" android:layout_marginRight="-150dp" android:layout_marginTop="1dp"
              android:layout_marginBottom="-1dp"
              android:layout_toEndOf="@id/nameTitle" android:layout_toRightOf="@id/nameTitle"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/weekTitle"
              android:text="@string/number_of_weeks"
              android:layout_below="@id/name"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="25dp"
              android:layout_marginRight="25dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/weeks"
              android:layout_alignRight="@id/weekTitle"
              android:layout_alignTop="@id/weekTitle"
              android:layout_alignBottom="@id/weekTitle"
              android:layout_marginLeft="1dp" android:layout_marginTop="1dp" android:layout_marginRight="-100dp"
              android:layout_marginBottom="-1dp"
              android:layout_toEndOf="@id/weekTitle" android:layout_toRightOf="@id/weekTitle"/>
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/weeks"
                 android:id="@+id/FragmentFrame2">
    <fragment android:layout_width="match_parent" android:layout_height="425dp"
              android:id="@+id/tableFragment2"
              android:name="com.example.myapplication.TableFragment"
              android:layout_below="@id/weeks"
              android:layout_marginTop="10dp" class="com.example.myapplication.TableFragment"/>
    </FrameLayout>
    <Button
            android:text="@string/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/deletebtn"
            android:layout_below="@id/FragmentFrame2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp" android:background="#4CAF50"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_arrow_right"
            android:layout_toRightOf="@+id/deletebtn"
            android:layout_alignTop="@+id/deletebtn"
            android:paddingLeft="20dp"
            android:id="@+id/right_arrow" android:layout_marginLeft="32dp" tools:ignore="VectorDrawableCompat"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_arrow_left"
            android:layout_toLeftOf="@+id/deletebtn"
            android:layout_alignTop="@+id/deletebtn"
            android:id="@+id/left_arrow" android:layout_marginTop="0dp" android:layout_marginRight="32dp"
            tools:ignore="VectorDrawableCompat"/>
</RelativeLayout>
    <com.google.android.material.navigation.NavigationView android:layout_width="wrap_content"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/navDrawer"
                                                           app:menu="@menu/nav_drawer_menu"
                                                           app:headerLayout="@layout/nav_header"
                                                           android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>